PROJECT(RVA)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

if(COMMAND cmake_policy)
      cmake_policy(SET CMP0003 NEW)
    endif(COMMAND cmake_policy)

IF(NOT ParaView_BINARY_DIR)
  FIND_PACKAGE(ParaView REQUIRED)
  INCLUDE(${PARAVIEW_USE_FILE})
ENDIF(NOT ParaView_BINARY_DIR)

OPTION(ParaviewGeo "Build ParaviewGeo" OFF)
OPTION(ISATIS "Build ISATIS Readers" ON)
OPTION(UTChem "Build UTChem Readers" ON)
OPTION(ShapefileReader "Build Shapefile Reader" ON)
OPTION(Paraview "Pack with paraview" OFF)

SET(COMPONENTS_STRING "")

ADD_SUBDIRECTORY(Core)
SET(COMPONENTS_STRING "${COMPONENTS_STRING}Core;")

IF(ShapefileReader)
	ADD_SUBDIRECTORY(ShapefileReader)
	SET(COMPONENTS_STRING "${COMPONENTS_STRING}ShapefileReader;")
ENDIF(ShapefileReader)

IF(ISATIS)
	ADD_SUBDIRECTORY(ISATIS)
	SET(COMPONENTS_STRING "${COMPONENTS_STRING}ISATIS;")
ENDIF(ISATIS)

IF(UTChem)
	ADD_SUBDIRECTORY(UTChem)
	SET(COMPONENTS_STRING "${COMPONENTS_STRING}UTChem;")
ENDIF(UTChem)

IF(ParaviewGeo)
	ADD_SUBDIRECTORY(ParaviewGeo)
ENDIF(ParaviewGeo)

IF(Paraview)
  SET(COMPONENTS_STRING "${COMPONENTS_STRING}ParaView;")
ENDIF(Paraview)

MESSAGE("Adding the following components: ${COMPONENTS_STRING}")


SET(RVA_BUILD_MAJOR "1")
SET(RVA_BUILD_MINOR "1")
SET(RVA_BUILD_RELEASE "2")
SET(RVA_BUILD_NUMBER "20140703.01")
SET(RVA_BUILD_DATE "20140703")
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/common/RVA_Build.h.cmake ${CMAKE_SOURCE_DIR}/common/RVA_Build.h)

SET(CPACK_PACKAGE_NAME "RVA")
SET(CPACK_PACKAGE_VENDOR "University of Illinois Urbana-Champaign")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "RVA Plugins")
SET(CPACK_PACKAGE_VERSION ${RVA_BUILD_NUMBER})
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/Copyright.txt")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "")
SET(CPACK_NSIS_DISPLAY_NAME "RVA ${RVA_BUILD_NUMBER} 64bit")
SET(CPACK_NSIS_INSTALL_ROOT "C:\\\\Program Files (x86)\\\\ParaView 3.14.1\\\\bin\\\\plugins")
SET(CPACK_COMPONENTS_ALL ${COMPONENTS_STRING})

INCLUDE(CPack)
